--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
               <a class="nav-link active px-4 rounded" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link px-4 rounded" href="#">Features</a>
+              <a class="nav-link px-4 rounded" href="#feature">Features</a>
             </li>
             <li class="nav-item">
               <a class="nav-link px-4 rounded" href="#">Pricing</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link px-4 rounded" href="contact">Contact US</a>
+              <a class="nav-link px-4 rounded" href="#contact">Contact US</a>
               <!-- <a class="nav-link" href="#">Contact US</a> -->
             </li>
          
@@ -89,7 +89,7 @@
 </main>    
 
 <!-- Services -->
-<section>
+<section id="feature">
   <div class="container-lg container-md container-sm">
     <div class="row">
       <div class="col-md-12 col-sm-12 col-lg-12">
