--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
               <a class="nav-link active px-4 rounded" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link px-4 rounded" href="#feature">Features</a>
+              <a class="nav-link px-4 rounded" href="#">Features</a>
             </li>
             <li class="nav-item">
               <a class="nav-link px-4 rounded" href="#">Pricing</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link px-4 rounded" href="#contact">Contact US</a>
+              <a class="nav-link px-4 rounded" href="">Contact US</a>
               <!-- <a class="nav-link" href="#">Contact US</a> -->
             </li>
          
